@@ -209,6 +209,10 @@ on titles, captions, and tags.
 \fB\-\-quiet\fR
 Print only prompts and error messages
 .TP
+\fB\-\-reminder\fR=\fIREMINDER\fR
+Calendar only \- specify time for added event's
+reminder, e.g. "10m", "3h", "1d"
+.TP
 \fB\-s\fR SUMMARY, \fB\-\-summary\fR=\fISUMMARY\fR
 Description of the upload, or file containing the
 description.
